Block the clipboard signals while showing the file dialogs

The GTK native file dialogs, when you copy a file name (with ctrl-c)
do something really horrible to the clipboard. This will cause a hang if
the app connects to the QClipBoard signals.

See: https://bugreports.qt-project.org/browse/QTBUG-11187

However, https://bugreports.qt-project.org/browse/QTBUG-32853 might still
occur: that is, if the user tries to copy the filename, there'll be a
delay on closing the app, and an error message on stderr:

QClipboard: Unable to receive an event from the clipboard manager in a reasonable time

BUG:325949