libs/main/KoFileDialogHelper.cpp
@@ -20,6 +20,9 @@
 #include "KoFileDialogHelper.h"
 #include <QDebug>
 #include <QFileDialog>
+#include <QApplication>
+#include <QClipboard>
+
 #include <kmimetype.h>
 #include <klocale.h>
 
@@ -110,12 +113,15 @@ QString KoFileDialogHelper::getOpenFileName(QWidget *parent,
                                             const QStringList &mimeList,
                                             const QString &defaultMime)
 {
+    qApp->clipboard()->blockSignals(true);
     QString str = getFilterString(defaultMime);
-    return QFileDialog::getOpenFileName(parent,
+    QString res = QFileDialog::getOpenFileName(parent,
                                         caption,
                                         dir,
                                         getFilterString(mimeList),
                                         &str);
+    qApp->clipboard()->blockSignals(false);
+    return res;
 }
 
 QStringList KoFileDialogHelper::getOpenFileNames(QWidget *parent,
@@ -124,19 +130,25 @@ QStringList KoFileDialogHelper::getOpenFileNames(QWidget *parent,
                                                  const QStringList &mimeList,
                                                  const QString &defaultMime)
 {
+    qApp->clipboard()->blockSignals(true);
     QString str = getFilterString(defaultMime);
-    return QFileDialog::getOpenFileNames(parent,
+    QStringList res = QFileDialog::getOpenFileNames(parent,
                                          caption,
                                          dir,
                                          getFilterString(mimeList),
                                          &str);
+    qApp->clipboard()->blockSignals(false);
+    return res;
 }
 
 QString KoFileDialogHelper::getOpenDirectory(QWidget *parent,
                                              const QString &caption,
                                              const QString &dir)
 {
-    return QFileDialog::getExistingDirectory(parent, caption, dir);
+    qApp->clipboard()->blockSignals(true);
+    QString res = QFileDialog::getExistingDirectory(parent, caption, dir);
+    qApp->clipboard()->blockSignals(false);
+    return res;
 }
 
 QString KoFileDialogHelper::getImportFileName(QWidget *parent,
@@ -145,6 +157,8 @@ QString KoFileDialogHelper::getImportFileName(QWidget *parent,
                                               const QStringList &mimeList,
                                               const QString &defaultMime)
 {
+    qApp->clipboard()->blockSignals(true);
+    QString res;
 #ifdef Q_OS_MAC
     QStringList result =  getFileNames(parent,
                                        caption,
@@ -154,17 +168,19 @@ QString KoFileDialogHelper::getImportFileName(QWidget *parent,
                                        QFileDialog::AcceptOpen,
                                        QFileDialog::ExistingFile);
     if (result.isEmpty())
-        return QString();
+        res = QString();
     else
-        return result.first();
+        res = result.first();
 #else
     QString str = getFilterString(defaultMime);
-    return QFileDialog::getOpenFileName(parent,
+    res = QFileDialog::getOpenFileName(parent,
                                         caption,
                                         dir,
                                         getFilterString(mimeList),
                                         &str);
 #endif
+    qApp->clipboard()->blockSignals(false);
+    return res;
 }
 
 QStringList KoFileDialogHelper::getImportFileNames(QWidget *parent,
@@ -173,8 +189,9 @@ QStringList KoFileDialogHelper::getImportFileNames(QWidget *parent,
                                                    const QStringList &mimeList,
                                                    const QString &defaultMime)
 {
+    qApp->clipboard()->blockSignals(true);
 #ifdef Q_OS_MAC
-    return getFileNames(parent,
+    QStringList res = getFileNames(parent,
                         caption,
                         dir,
                         mimeList,
@@ -183,18 +200,22 @@ QStringList KoFileDialogHelper::getImportFileNames(QWidget *parent,
                         QFileDialog::ExistingFiles);
 #else
     QString str = getFilterString(defaultMime);
-    return QFileDialog::getOpenFileNames(parent,
+    QStringList res =QFileDialog::getOpenFileNames(parent,
                                          caption,
                                          dir,
                                          getFilterString(mimeList),
                                          &str);
 #endif
+    qApp->clipboard()->blockSignals(false);
+    return res;
 }
 
 QString KoFileDialogHelper::getImportDirectory(QWidget *parent,
                                                const QString &caption,
                                                const QString &dir)
 {
+    qApp->clipboard()->blockSignals(true);
+    QString res;
 #ifdef Q_OS_MAC
     QStringList result = getFileNames(parent,
                                       caption,
@@ -204,12 +225,14 @@ QString KoFileDialogHelper::getImportDirectory(QWidget *parent,
                                       QFileDialog::AcceptOpen,
                                       QFileDialog::Directory);
     if (result.isEmpty())
-        return QString();
+        res = QString();
     else
-        return result.first();
+        res = result.first();
 #else
-    return QFileDialog::getExistingDirectory(parent, caption, dir);
+    res = QFileDialog::getExistingDirectory(parent, caption, dir);
 #endif // Q_OS_MAC
+    qApp->clipboard()->blockSignals(false);
+    return res;
 }
 
 QString KoFileDialogHelper::getSaveFileName(QWidget *parent,
@@ -218,6 +241,8 @@ QString KoFileDialogHelper::getSaveFileName(QWidget *parent,
                                             const QStringList &mimeList,
                                             const QString &defaultMime)
 {
+    qApp->clipboard()->blockSignals(true);
+    QString res;
 #ifdef Q_OS_MAC
     QStringList result = getFileNames(parent,
                                       caption,
@@ -227,15 +252,17 @@ QString KoFileDialogHelper::getSaveFileName(QWidget *parent,
                                       QFileDialog::AcceptSave,
                                       QFileDialog::AnyFile);
     if (result.isEmpty())
-        return QString();
+        res = QString();
     else
-        return result.first();
+        res = result.first();
 #else
     QString str = getFilterString(defaultMime);
-    return QFileDialog::getSaveFileName(parent,
+    res = QFileDialog::getSaveFileName(parent,
                                         caption,
                                         dir,
                                         getFilterString(mimeList),
                                         &str);
 #endif // Q_OS_MAC
+    qApp->clipboard()->blockSignals(false);
+    return res;
 }
